--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
 
 <body>
 
+
+
     <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -66,15 +68,15 @@
                 </div>
     </nav>
 
-    <img src="websiteimages/image7.jpg" class="d-block w-100" class="img-7" alt="image7">
+    <img src="websiteimages/image7.jpg" class="img-fluid" alt="Responsive image" class="img-7" alt="image7">
     <div class="text-block">
 
         <a href="https://www.instagram.com/">
-            <img src="icons/insta.jpg" class="img" width="130" height="100" alt="insta">
+            <img src="icons/insta.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="100"
+                height="100" alt="insta">
         </a>
 
-
-        <div class="container">
+        <div class="img-fluid rounded mx-auto d-block container">
             <form action="action_page.php">
 
                 <label for="fname">First Name</label>
@@ -100,6 +102,7 @@
 
     </div>
 
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -111,7 +114,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
 
 </body>
 
