--- a/Graphicdesign.html
+++ b/Graphicdesign.html
@@ -78,45 +78,44 @@
         </ol>
 
         <div class="carousel-inner">
+
+
             <div class="carousel-item active">
-                <img src="websiteimages/image3.jpg" class="rounded mx-auto d-block" width="1400" height="1400"
-                    alt="image3">
-            </div>
-            <div class="carousel-item">
-                <img src="websiteimages/image4.jpg" class="rounded mx-auto d-block" width="1000" height="1100"
-                    alt="image4">
-            </div>
-            <div class="carousel-item">
-                <img src="websiteimages/image5.jpg" class="rounded mx-auto d-block" width="1000" height="1000"
-                    alt="image5">
+                <img src="websiteimages/image3.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="1000" height="1100" alt="image3">
             </div>
 
             <div class="carousel-item">
-                <img src="websiteimages/image19.jpg" class="rounded mx-auto d-block" width="900" height="750"
-                    alt="image19">
+                <img src="websiteimages/image4.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="1000" height="1100" alt="image4">
+            </div>
+            <div class="carousel-item">
+                <img src="websiteimages/image5.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="1000" height="1100" alt="image5">
             </div>
 
             <div class="carousel-item">
-                <img src="websiteimages/image20.jpg" class="rounded mx-auto d-block" width="700" height="800"
-                    alt="image20">
+                <img src="websiteimages/image19.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="1000" height="1100" alt="image19">
             </div>
 
             <div class="carousel-item">
-                <img src="websiteimages/image1.jpg" class="rounded mx-auto d-block" width="900" height="1200"
-                    alt="image1">
+                <img src="websiteimages/image20.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="1000" height="1100" alt="image20">
             </div>
 
             <div class="carousel-item">
-                <img src="websiteimages/image2.jpg" class="rounded mx-auto d-block" width="900" height="1200"
-                    alt="image2">
+                <img src="websiteimages/image1.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="1000" height="1100" alt="image1">
+            </div>
+
+            <div class="carousel-item">
+                <img src="websiteimages/image2.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="1000" height="1100" alt="image2">
             </div>
 
 
         </div>
-
-
-
-
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
