--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,10 @@
     <title>Daniela Baldacchino</title>
 </head>
 
-<body>
+<body cz-shortcut-listen="true">
+
+
+
 
     <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
@@ -67,9 +70,11 @@
                 </div>
     </nav>
 
-    <img src="websiteimages/image8.jpg" class="rounded mx-auto d-block" width="2000" height="900" alt="image8">
+    <img src="websiteimages/image8.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
+        height="1200" alt="image8">
 
     <p class="text-center">WELCOME TO DANIELA'S ART WEBSITE</p>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -82,9 +87,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
-
-
 
 
 
