--- a/Photography.html
+++ b/Photography.html
@@ -16,7 +16,8 @@
 
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
+    <nav class="navbar navbar-expand-md navbar-light .bg-dark sticky-top">
+
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,25 +78,25 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Photographyimages/image11.jpg" class="rounded mx-auto d-block" width="1000" height="1000"
-                    alt="image11">
+                <img src="Photographyimages/image11.jpg" class="img-fluid rounded mx-auto d-block"
+                    alt="Responsive image" alt="Responsive image" width="1000" height="1000" alt="image11">
             </div>
             <div class="carousel-item">
-                <img src="Photographyimages/image12.jpg" class="rounded mx-auto d-block" width="1000" height="1100"
-                    alt="image12">
+                <img src="Photographyimages/image12.jpg" class="img-fluid rounded mx-auto d-block"
+                    alt="Responsive image" width="1000" height="1100" alt="image12">
             </div>
             <div class="carousel-item">
-                <img src="Photographyimages/image13.jpg" class="rounded mx-auto d-block" width="1100" height="1100"
-                    alt="image13">
+                <img src="Photographyimages/image13.jpg" class="img-fluid rounded mx-auto d-block"
+                    alt="Responsive image" width="1100" height="1100" alt="image13">
             </div>
 
             <div class="carousel-item">
-                <img src="Photographyimages/image14.jpg" class="rounded mx-auto d-block" width="900" height="1200"
-                    alt="image14">
+                <img src="Photographyimages/image14.jpg" class="img-fluid rounded mx-auto d-block"
+                    alt="Responsive image" width="900" height="1200" alt="image14">
             </div>
             <div class="carousel-item">
-                <img src="Photographyimages/image15.jpg" class="rounded mx-auto d-block" width="1200" height="800"
-                    alt="image15">
+                <img src="Photographyimages/image15.jpg" class="img-fluid rounded mx-auto d-block"
+                    alt="Responsive image" width="1200" height="800" alt="image15">
             </div>
 
             <div class="carousel-item">
