--- a/contact.html
+++ b/contact.html
@@ -68,15 +68,17 @@
                 </div>
     </nav>
 
+
     <img src="websiteimages/image7.jpg" class="img-fluid" alt="Responsive image" class="img-7" alt="image7">
+
     <div class="text-block">
 
         <a href="https://www.instagram.com/">
             <img src="icons/insta.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="100"
-                height="100" alt="insta">
+                height="50" alt="insta">
         </a>
 
-        <div class="img-fluid rounded mx-auto d-block container">
+        <div class="container">
             <form action="action_page.php">
 
                 <label for="fname">First Name</label>
