--- a/About.html
+++ b/About.html
@@ -19,6 +19,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
+
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,17 +68,27 @@
     </nav>
 
 
-    <img src="websiteimages/image9.jpg" class="d-block w-100" class="img-9" alt="image9">
+    <img src="websiteimages/image9.jpg" class="img-fluid" alt="Responsive image" width="4000" height="4000"
+        alt="image9">
+
     <div class="container">
-
-
-        <div class="centered"> I am Daniela Baldacchino, currently following a Digital Art course. Art is my passion and
-            my means of expression. I work both traditionally and digitally.</div>
+        <div class="txt-fluid centered" alt="Responsive text"> I am Daniela Baldacchino, currently following a Digital
+            Art course. Art is my passion and my means of expression. I work both traditionally and digitally.</div>
     </div>
 
 
 
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 </body>
 
