--- a/trial.html
+++ b/trial.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>graphicdesign</title>
-    <link rel="stylesheet" type="text/css" href="About.css">
+    <title>contact</title>
+    <link rel="stylesheet" type="text/css" href="trial.css">
 
 </head>
 
 <body>
+
+
 
     <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
@@ -43,7 +45,6 @@
                                 <li class="nav-item ">
                                     <a class="nav-link" href="Graphicdesign.html">Graphic Design <span
                                             class="sr-only">(current)</span></a>
-
                                 </li>
 
                                 <li class="nav-item">
@@ -67,64 +68,11 @@
                 </div>
     </nav>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-        </ol>
 
-        <div class="carousel-inner">
+    <br>
+    <p class="text-center">Contact Me On</p>
 
 
-            <div class="carousel-item active">
-                <img src="websiteimages/image3.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image3">
-            </div>
-
-            <div class="carousel-item">
-                <img src="websiteimages/image4.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image4">
-            </div>
-            <div class="carousel-item">
-                <img src="websiteimages/image5.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image5">
-            </div>
-
-            <div class="carousel-item">
-                <img src="websiteimages/image19.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image19">
-            </div>
-
-            <div class="carousel-item">
-                <img src="websiteimages/image20.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image20">
-            </div>
-
-            <div class="carousel-item">
-                <img src="websiteimages/image1.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image1">
-            </div>
-
-            <div class="carousel-item">
-                <img src="websiteimages/image2.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image2">
-            </div>
-
-
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -137,7 +85,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
 
 </body>
 
