--- a/trial.html
+++ b/trial.html
@@ -11,7 +11,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>contact</title>
-    <link rel="stylesheet" type="text/css" href="trial.css">
+    <link rel="stylesheet" type="text/css" href="contact.css">
 
 </head>
 
@@ -69,9 +69,37 @@
     </nav>
 
 
-    <br>
-    <p class="text-center">Contact Me On</p>
 
+    <div class="text-block">
+
+
+
+
+        <div class="container">
+            <form action="action_page.php">
+
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <label for="country">Country</label>
+                <select id="country" name="country">
+                    <option value="malta">Malta</option>
+                </select>
+
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input type="submit" value="Submit">
+
+            </form>
+
+        </div>
+
+
+    </div>
 
 
     <!-- Optional JavaScript -->
