--- a/contact.html
+++ b/contact.html
@@ -69,53 +69,43 @@
     </nav>
 
 
-    <img src="websiteimages/image7.jpg" class="img-fluid" alt="Responsive image" class="img-7" alt="image7">
+    <div class="image" style="background: url(websiteimages/images/image1)" class="page-holder bg-cover">
+        <div class="container py-5">
+            <header class="text text-white py-5">
+                <div class="inputs" id="textbox">
 
-    <div class="text-block">
+                    <label for="first-name">Name:</label>
+                    <br>
+                    <input id="first-name" type="text" placeholder="Jane" required>
+                    <br>
+                    <br>
+                    <label for="surname">Surname:</label>
+                    <br>
+                    <input type="text" id="Surname" placeholder="Doe" required>
+                    <br>
+                    <br>
+                    <label for="emailaddress"> Email:</label>
+                    <br>
+                    <input id="emailaddress" type="text" placeholder="email" required>
+                    <br>
+                    <br>
+                    <label for="message"> Your Message:</label>
+                    <br>
+                    <input type="text" id="message" placeholder="your message" required>
+                    <button type="button" class="btn btn-danger btn-lg btn-center">Send</button>
+                </div>
 
-        <a href="https://www.instagram.com/">
-            <img src="icons/insta.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="100"
-                height="50" alt="insta">
-        </a>
-
-        <div class="container">
-            <form action="action_page.php">
-
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-                <label for="country">Country</label>
-                <select id="country" name="country">
-                    <option value="malta">Malta</option>
-                </select>
-
-                <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-                <input type="submit" value="Submit">
-
-            </form>
-
-        </div>
-
-
-    </div>
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+                <!-- Optional JavaScript -->
+                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+                    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+                    crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                    crossorigin="anonymous"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+                    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+                    crossorigin="anonymous"></script>
 
 </body>
 
