--- a/contact.html
+++ b/contact.html
@@ -68,44 +68,52 @@
                 </div>
     </nav>
 
+    <p class="text-center">WELCOME TO DANIELA'S ART WEBSITE</p>
 
-    <div class="image" style="background: url(websiteimages/images/image1)" class="page-holder bg-cover">
-        <div class="container py-5">
-            <header class="text text-white py-5">
-                <div class="inputs" id="textbox">
 
-                    <label for="first-name">Name:</label>
-                    <br>
-                    <input id="first-name" type="text" placeholder="Jane" required>
-                    <br>
-                    <br>
-                    <label for="surname">Surname:</label>
-                    <br>
-                    <input type="text" id="Surname" placeholder="Doe" required>
-                    <br>
-                    <br>
-                    <label for="emailaddress"> Email:</label>
-                    <br>
-                    <input id="emailaddress" type="text" placeholder="email" required>
-                    <br>
-                    <br>
-                    <label for="message"> Your Message:</label>
-                    <br>
-                    <input type="text" id="message" placeholder="your message" required>
-                    <button type="button" class="btn btn-danger btn-lg btn-center">Send</button>
-                </div>
+    <div class="container py-5">
+        <header class="text text-white py-5">
+            <div class="inputs" id="textbox">
 
-                <!-- Optional JavaScript -->
-                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-                <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-                    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-                    crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                    crossorigin="anonymous"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-                    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-                    crossorigin="anonymous"></script>
+                <label for="first-name">Name:</label>
+                <br>
+                <input id="first-name" type="text">
+                <br>
+                <br>
+                <label for="surname">Surname:</label>
+                <br>
+                <input type="text" id="Surname">
+                <br>
+                <br>
+                <label for="emailaddress"> Email:</label>
+                <br>
+                <input id="emailaddress" type="text">
+                <br>
+                <br>
+                <label for="message"> Your Message:</label>
+                <br>
+                <input type="text" id="message" placeholder="your message" required>
+                <button type="button" class="btn btn-danger btn-lg btn-center">Send</button>
+            </div>
+            <!-- Add icon library -->
+            <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+            <!-- Add font awesome icons -->
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+            <a href="https://mobile.twitter.com/home?lang=en" class="fa fa-twitter"></a>
+
+            <!-- Optional JavaScript -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+                integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+                crossorigin="anonymous"></script>
 
 </body>
 
