--- a/About.html
+++ b/About.html
@@ -68,13 +68,20 @@
     </nav>
 
 
-    <img src="websiteimages/image9.jpg" class="img-fluid" alt="Responsive image" width="4000" height="4000"
-        alt="image9">
+    <div id="box-search">
+        <div class="thumbnail">
+            <img src="websiteimages/image9.jpg" class="img-fluid" alt="Responsive image" width="4000" height="4000"
+                alt="image9">
 
-    <div class="container">
-        <div class="txt-fluid centered" alt="Responsive text"> I am Daniela Baldacchino, currently following a Digital
-            Art course. Art is my passion and my means of expression. I work both traditionally and digitally.</div>
+            <div class="text" alt="Responsive text-fluid">
+                <p>I am Daniela Baldacchino, Maltese based artist. I am currently following a Digital
+                    Art course. Art is my passion and my means of expression. I work both traditionally and digitally.
+                </p>
+
+            </div>
+        </div>
     </div>
+
 
 
 
