--- a/About.html
+++ b/About.html
@@ -67,20 +67,15 @@
                 </div>
     </nav>
 
+    <img src="websiteimages/image9.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
+        height="1200" alt="image9">
 
-    <div id="box-search">
-        <div class="thumbnail">
-            <img src="websiteimages/image9.jpg" class="img-fluid" alt="Responsive image" width="4000" height="4000"
-                alt="image9">
+    <p class="text-center"> I am Daniela Baldacchino, Maltese based artist. I am currently following a Digital
+        Art course. Art is my passion and my means of expression. I work both traditionally and digitally.</p>
 
-            <div class="text" alt="Responsive text-fluid">
-                <p>I am Daniela Baldacchino, Maltese based artist. I am currently following a Digital
-                    Art course. Art is my passion and my means of expression. I work both traditionally and digitally.
-                </p>
 
-            </div>
-        </div>
-    </div>
+
+
 
 
 
