--- a/About.html
+++ b/About.html
@@ -67,7 +67,7 @@
                 </div>
     </nav>
 
-    <img src="websiteimages/image9.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
+    <img src="aboutme/image9.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
         height="1200" alt="image9">
 
     <p class="text-center"> I am Daniela Baldacchino, Maltese based artist. I am currently following a Digital
