--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 
     <div id="box-search">
         <div class="thumbnail">
-            <img src="websiteimages/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400"
+            <img src="contact/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400"
                 alt="image7">
 
 
