--- a/Graphicdesign.html
+++ b/Graphicdesign.html
@@ -11,7 +11,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>graphicdesign</title>
-    <link rel="stylesheet" type="text/css" href="About.css">
+    <link rel="stylesheet" type="text/css" href="Graphicdesign.css">
 
 </head>
 
