--- a/Graphicdesign.html
+++ b/Graphicdesign.html
@@ -75,6 +75,8 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
         </ol>
 
         <div class="carousel-inner">
@@ -114,6 +116,10 @@
                     width="1000" height="1100" alt="image2">
             </div>
 
+            <div class="carousel-item">
+                <img src="websiteimages/image21.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="700" height="800" alt="image21">
+            </div>
 
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
