--- a/Home.html
+++ b/Home.html
@@ -37,30 +37,31 @@
                 </li>
 
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapsenavbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item ">
                             <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
                         </li>
 
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="collapsenavbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item ">
                                     <a class="nav-link" href="Graphicdesign.html">Graphic Design <span
                                             class="sr-only">(current)</span></a>
+
                                 </li>
+
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="Photography.html">Photography <span
-                                            class="sr-only">(current)
-                                            </span</a> </li> <div class="dropdown-menu"
+                                            class="sr-only">(current)</span</a> </li> <div class="dropdown-menu"
                                                 aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
+                                            <a class="dropdown-item">Action</a>
+                                            <a class="dropdown-item">Another action</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
+                                            <a class="dropdown-item">Something else here</a>
                         </div>
-                        </li>
+
                         <li class="nav-item ">
                             <a class="nav-link" href="contact.html">contact <span class="sr-only">(current)</span></a>
                         </li>
