--- a/Photography.html
+++ b/Photography.html
@@ -76,53 +76,65 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
         </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="Photographyimages/image11.jpg" class="img-fluid rounded mx-auto d-block"
-                    alt="Responsive image" alt="Responsive image" width="1000" height="1000" alt="image11">
-            </div>
-            <div class="carousel-item">
-                <img src="Photographyimages/image12.jpg" class="img-fluid rounded mx-auto d-block"
-                    alt="Responsive image" width="1000" height="1100" alt="image12">
-            </div>
-            <div class="carousel-item">
-                <img src="Photographyimages/image13.jpg" class="img-fluid rounded mx-auto d-block"
-                    alt="Responsive image" width="1100" height="1100" alt="image13">
-            </div>
+        <div class="carousel-inner"> </div>
+        <div class="carousel-item active">
+            <img src="Photographyimages/image11.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                alt="Responsive image" width="1000" height="1000" alt="image11">
+        </div>
+        <div class="carousel-item">
+            <img src="Photographyimages/image12.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                width="1000" height="1100" alt="image12">
+        </div>
 
-            <div class="carousel-item">
-                <img src="Photographyimages/image14.jpg" class="img-fluid rounded mx-auto d-block"
-                    alt="Responsive image" width="900" height="1200" alt="image14">
-            </div>
-            <div class="carousel-item">
-                <img src="Photographyimages/image15.jpg" class="img-fluid rounded mx-auto d-block"
-                    alt="Responsive image" width="1200" height="800" alt="image15">
-            </div>
+        <div class="carousel-item">
+            <img src="Photographyimages/image22.jpg" class="rounded mx-auto d-block" width="1200" height="1000"
+                alt="image22">
+        </div>
 
-            <div class="carousel-item">
-                <img src="Photographyimages/image17.jpg" class="rounded mx-auto d-block" width="700" height="1000"
-                    alt="image17">
-            </div>
+        <div class="carousel-item">
+            <img src="Photographyimages/image23.jpg" class="rounded mx-auto d-block" width="1500" height="1000"
+                alt="image23">
+        </div>
 
-            <div class="carousel-item">
-                <img src="Photographyimages/image18.jpg" class="rounded mx-auto d-block" width="700" height="1000"
-                    alt="image1">
-            </div>
+        <div class="carousel-item">
+            <img src="Photographyimages/image13.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                width="1100" height="1100" alt="image13">
+        </div>
 
+        <div class="carousel-item">
+            <img src="Photographyimages/image14.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                width="900" height="1200">
+        </div>
+        <div class="carousel-item">
+            <img src="Photographyimages/image15.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                width="1200" height="800">
+        </div>
+
+        <div class="carousel-item">
+            <img src="Photographyimages/image17.jpg" class="rounded mx-auto d-block" width="700" height="1000"
+                alt="image17">
+        </div>
+
+        <div class="carousel-item">
+            <img src="Photographyimages/image18.jpg" class="rounded mx-auto d-block" width="700" height="1000"
+                alt="image1">
         </div>
 
 
-
-
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
+
+
+
+
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
