--- a/Photography.html
+++ b/Photography.html
@@ -47,9 +47,8 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="Photography.html">Photography <span
-                                            class="sr-only">(current)
-                                            </span</a> </li> <div class="dropdown-menu"
+                                    <a class="nav-link" href="Photography.html">Photography
+                                        <span class="sr-only">(current)</span</a> </li> <div class="dropdown-menu"
                                                 aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="#">Action</a>
                                             <a class="dropdown-item" href="#">Another action</a>
@@ -57,6 +56,7 @@
                                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                         </li>
+
                         <li class="nav-item ">
                             <a class="nav-link" href="contact.html">contact <span class="sr-only">(current)</span></a>
                         </li>
@@ -87,13 +87,13 @@
         </div>
 
         <div class="carousel-item">
-            <img src="Photographyimages/image22.jpg" class="rounded mx-auto d-block" width="1200" height="1000"
-                alt="image22">
+            <img src="Photographyimages/image22.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                width="1200" height="1000" alt="image22">
         </div>
 
         <div class="carousel-item">
-            <img src="Photographyimages/image23.jpg" class="rounded mx-auto d-block" width="1500" height="1000"
-                alt="image23">
+            <img src="Photographyimages/image23.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                width="1500" height="1000" alt="image23">
         </div>
 
         <div class="carousel-item">
