--- a/contact.html
+++ b/contact.html
@@ -49,18 +49,19 @@
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="Photography.html">Photography <span
-                                            class="sr-only">(current)
-                                            </span</a> </li> <div class="dropdown-menu"
+                                            class="sr-only">(current)</span</a> </li> <div class="dropdown-menu"
                                                 aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="#">Action</a>
                                             <a class="dropdown-item" href="#">Another action</a>
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
-                        </li>
+
+
                         <li class="nav-item ">
                             <a class="nav-link" href="contact.html">contact <span class="sr-only">(current)</span></a>
                         </li>
+
                     </ul>
 
 
@@ -75,9 +76,6 @@
         <div class="thumbnail">
             <img src="contact/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400"
                 alt="image7">
-
-
-
 
             <div class="container py-5">
                 <header class="text text-white py-5">
@@ -103,6 +101,7 @@
 
 
             </div>
+
         </div>
 
 
@@ -116,6 +115,8 @@
         <!-- Add font awesome icons -->
         <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
         <a href="https://mobile.twitter.com/home?lang=en" class="fa fa-twitter"></a>
+
+        <img src="contact/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400" alt="image7">
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
