--- a/Graphicdesign.html
+++ b/Graphicdesign.html
@@ -88,6 +88,11 @@
             </div>
 
             <div class="carousel-item">
+                <img src="websiteimages/image21.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="700" height="800" alt="image21">
+            </div>
+
+            <div class="carousel-item">
                 <img src="websiteimages/image4.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
                     width="1000" height="1100" alt="image4">
             </div>
@@ -107,18 +112,25 @@
             </div>
 
             <div class="carousel-item">
+                <img src="websiteimages/bells.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="400" height="500" alt="bells">
+            </div>
+
+            <div class="carousel-item">
                 <img src="websiteimages/image1.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
                     width="1000" height="1100" alt="image1">
             </div>
+
 
             <div class="carousel-item">
                 <img src="websiteimages/image2.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
                     width="1000" height="1100" alt="image2">
             </div>
 
+
             <div class="carousel-item">
-                <img src="websiteimages/image21.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="700" height="800" alt="image21">
+                <img src="websiteimages/medusa.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
+                    width="1000" height="1100" alt="medusa">
             </div>
 
         </div>
