--- a/contact.html
+++ b/contact.html
@@ -17,59 +17,34 @@
 
 <body>
 
-
-
-    <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item active">
                     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current) </span></a>
                 </li>
-
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item ">
-                            <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
-                        </li>
-
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="Graphicdesign.html">Graphic Design <span
-                                            class="sr-only">(current)</span></a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="Photography.html">Photography <span
-                                            class="sr-only">(current)</span</a> </li> <div class="dropdown-menu"
-                                                aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-
-
-                        <li class="nav-item ">
-                            <a class="nav-link" href="contact.html">contact <span class="sr-only">(current)</span></a>
-                        </li>
-
-                    </ul>
-
-
-
-                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Graphicdesign.html">Graphic Design</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Photography.html">Photography </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact </a>
+                </li>
+            </ul>
+        </div>
     </nav>
-
-
 
 
     <div id="box-search">
@@ -85,41 +60,30 @@
                         <input id="first-name" type="text">
 
                         <label for="surname">Surname:</label>
-
                         <input type="text" id="Surname">
 
-                        <label for="emailaddress"> Email:</label>
-
+                        <label for="emailaddress">Email:</label>
                         <input id="emailaddress" type="text">
 
-
-                        <label for="message"> Your Message:</label>
+                        <label for="message">Your Message:</label>
 
                         <input type="text" id="message" placeholder="your message" required>
                         <button type="button" class="btn btn-light btn-lg btn-center">submit</button>
                     </div>
-
-
+                </header>
             </div>
 
         </div>
 
-
-
-
-
-        <!-- Add icon library -->
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <!-- Add font awesome icons -->
         <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
         <a href="https://mobile.twitter.com/home?lang=en" class="fa fa-twitter"></a>
 
         <img src="contact/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400" alt="image7">
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
             crossorigin="anonymous"></script>
