--- a/Graphicdesign.html
+++ b/Graphicdesign.html
@@ -17,54 +17,33 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-light .bg-light sticky-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <a class="navbar-brand" href="#">DANIELA BALDACCHINO </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item active">
                     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current) </span></a>
                 </li>
-
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item ">
-                            <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
-                        </li>
-
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="Graphicdesign.html">Graphic Design <span
-                                            class="sr-only">(current)</span></a>
-
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="Photography.html">Photography <span
-                                            class="sr-only">(current)
-                                            </span</a> </li> <div class="dropdown-menu"
-                                                aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="contact.html">contact <span class="sr-only">(current)</span></a>
-                        </li>
-                    </ul>
-
-
-
-                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="About.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Graphicdesign.html">Graphic Design</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Photography.html">Photography </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact </a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -77,10 +56,11 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
         </ol>
 
         <div class="carousel-inner">
-
 
             <div class="carousel-item active">
                 <img src="websiteimages/image3.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
@@ -144,8 +124,6 @@
         </a>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
