--- a/About.html
+++ b/About.html
@@ -50,7 +50,7 @@
 
 
     <img src="aboutme/image9.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
-        height="1200" alt="image9">
+        height="1200">
 
     <p class="text-center"> I am Daniela Baldacchino, a 20 year ol Maltese based artist. I am currently following a
         Digital Art course. I am a multi-media aritist, where my work varies from highly detailed artworks to very
