--- a/Graphicdesign.html
+++ b/Graphicdesign.html
@@ -64,53 +64,53 @@
 
             <div class="carousel-item active">
                 <img src="websiteimages/image3.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image3">
+                    width="1000" height="1100">
             </div>
 
             <div class="carousel-item">
                 <img src="websiteimages/image21.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="700" height="800" alt="image21">
+                    width="700" height="800">
             </div>
 
             <div class="carousel-item">
                 <img src="websiteimages/image4.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image4">
+                    width="1000" height="1100">
             </div>
             <div class="carousel-item">
                 <img src="websiteimages/image5.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image5">
+                    width="1000" height="1100">
             </div>
 
             <div class="carousel-item">
                 <img src="websiteimages/image19.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image19">
+                    width="1000" height="1100">
             </div>
 
             <div class="carousel-item">
                 <img src="websiteimages/image20.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image20">
+                    width="1000" height="1100">
             </div>
 
             <div class="carousel-item">
                 <img src="websiteimages/bells.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="400" height="500" alt="bells">
+                    width="400" height="500">
             </div>
 
             <div class="carousel-item">
                 <img src="websiteimages/image1.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image1">
+                    width="1000" height="1100">
             </div>
 
 
             <div class="carousel-item">
                 <img src="websiteimages/image2.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="image2">
+                    width="1000" height="1100">
             </div>
 
 
             <div class="carousel-item">
                 <img src="websiteimages/medusa.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                    width="1000" height="1100" alt="medusa">
+                    width="1000" height="1100">
             </div>
 
         </div>
