--- a/Home.html
+++ b/Home.html
@@ -48,7 +48,7 @@
     </nav>
 
     <img src="websiteimages/image8.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
-        height="1200" alt="image8">
+        height="1200">
 
     <p class="text-center">WELCOME TO DANIELA'S ART WEBSITE</p>
 
