--- a/Photography.html
+++ b/Photography.html
@@ -58,26 +58,26 @@
         <div class="carousel-inner"> </div>
         <div class="carousel-item active">
             <img src="Photographyimages/image11.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                alt="Responsive image" width="1000" height="1000" alt="image11">
+                width="1000" height="1000">
         </div>
         <div class="carousel-item">
             <img src="Photographyimages/image12.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                width="1000" height="1100" alt="image12">
+                width="1000" height="1100">
         </div>
 
         <div class="carousel-item">
             <img src="Photographyimages/image22.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                width="1200" height="1000" alt="image22">
+                width="1200" height="1000">
         </div>
 
         <div class="carousel-item">
             <img src="Photographyimages/image23.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                width="1500" height="1000" alt="image23">
+                width="1500" height="1000">
         </div>
 
         <div class="carousel-item">
             <img src="Photographyimages/image13.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image"
-                width="1100" height="1100" alt="image13">
+                width="1100" height="1100">
         </div>
 
         <div class="carousel-item">
