--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,7 @@
 
     <div id="box-search">
         <div class="thumbnail">
-            <img src="contact/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400"
-                alt="image7">
+            <img src="contact/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400">
 
             <div class="container py-5">
                 <header class="text text-white py-5">
@@ -60,7 +59,7 @@
                         <input id="first-name" type="text">
 
                         <label for="surname">Surname:</label>
-                        <input type="text" id="Surname">
+                        <input id="surname" type="text">
 
                         <label for="emailaddress">Email:</label>
                         <input id="emailaddress" type="text">
@@ -72,27 +71,26 @@
                     </div>
                 </header>
             </div>
-
         </div>
+    </div>
 
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
-        <a href="https://mobile.twitter.com/home?lang=en" class="fa fa-twitter"></a>
+    <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+    <a href="https://mobile.twitter.com/home?lang=en" class="fa fa-twitter"></a>
 
-        <img src="contact/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400" alt="image7">
+    <img src="contact/image7.jpg" class="img-fluid" alt="Responsive image" width="4000" height="400">
 
 
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 </body>
 
