--- a/About.html
+++ b/About.html
@@ -52,11 +52,12 @@
     <img src="aboutme/image9.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" width="900"
         height="1200">
 
-    <p class="text-center"> I am Daniela Baldacchino, a 20 year ol Maltese based artist. I am currently following a
+    <p class="text-center"> I am Daniela Baldacchino, a 20 year old Maltese based artist,currently following a
         Digital Art course. I am a multi-media aritist, where my work varies from highly detailed artworks to very
-        minimalistic. I initially started working on detailed traditional artworks, however, I have grown a passion
-        for simple digital illustrations. Art is my means of expressing my deepest thoughts and feelings, I hope to
-        inspire other people through my art.
+        minimalistic. I initially started working on detailed, traditional artworks, however, I have grown a passion
+        for simple digital illustrations. Art is my means of expressing my deepest thoughts and feelings, through which
+        I hope to
+        inspire other people through art.
     </p>
 
 
